--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,16 @@
     <groupId>com.pucara</groupId>
     <artifactId>pucara</artifactId>
     <version>1.0.0</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <modules>
+        <module>core</module>
+    </modules>
 
 </project>
